add count interface of task, rename router, fix bug
